--- a/Backend/Lambda/templates/accounts/forgot_password.html
+++ b/Backend/Lambda/templates/accounts/forgot_password.html
@@ -5,7 +5,7 @@
   <div class="card">
     <div class="header">
       <h1>パスワードリセット</h1>
-      <p>WAMBDA CSR001 Sample Application</p>
+      <p>Finance Dashboard</p>
     </div>
 
     {% if error %}
